--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Javascript development environment bootstrap",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prestart": "node buildScripts/startMessage.js",
+    "start": "node buildScripts/srcServer.js",
+    "security-check": "nsp check"
   },
   "repository": {
     "type": "git",
